tests/models/struct/unnamed/isize/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    isize
);
fn main() {}
