tests/models/struct/unnamed/isize/fail/min_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_items = 2)]
    isize
);
fn main() {}
